================================================
* Applied a patch from Schwern RT #53133 "test failure occurs if
  the build directory is symlinked"
* Explicitly set the location of cpanp-run-perl when under PERL_CORE
  in t/inc/conf.pl
    
Changes for 0.9003      Mon Mar 15 13:51:12 2010
================================================
* Resolve warnings when using blead perl, reported by Apocalypse RT #55501
* Applied patch from Apocalypse RT #55541 that changes the 
  behviour when a prereq on a core-only module is detected. We 
  raise a warning now, but will proceed with the installation.
  This is how CPAN.pm handles it.
* Removed one duff mirror and an out-of-date mirror from
  our default mirror list. Replaced with fast-sync mirrors.

Changes for 0.9002      Fri Mar 12 13:11:00 2010
================================================
* Added support for CPAN Testers 2.0 (David Golden)

Changes for 0.9001      Thu Dec 24 10:21:11 2009
================================================
* RT #52988 Regression in Internals::Utils, reported by CRAKRJACK
* Fix a regression with dist_type not being propagated

Changes for 0.90        Thu Dec 17 21:40:13 2009
================================================
* Version bump

Changes for 0.89_12     Mon Dec  7 13:33:16 2009
================================================
* Resolve RT #52348 Duplicate test output, reported by Apocalypse
* Fixed typo in Shell::Default, RT #52376, reported by Apocalypse

Changes for 0.89_11     Tue Dec  1 13:14:24 2009
================================================
* Fixed RT #52287 reported by Apocalypse regarding
  Test::Reporter barfing on send()
* Change SQLite to AutoCommit, resolves RT #52308,
  reported by Apocalypse

Changes for 0.89_10     Sat Nov 28 23:20:09 2009
================================================
* Resolve RT #51516 setting conf options which
  include spaces.
* Explicitly use Cwd's chdir in _chdir()

Changes for 0.89_09     Thu Nov 12 21:54:01 2009